--- a/style.css
+++ b/style.css
@@ -1,110 +1,140 @@
 header{
-  color: white
-}
-body {
-  margin: 40px;
-  background: purple;
-}
-span.title {
-  font-weight: bold;
-  color: white;
-  text-shadow: 2px 2px 4px #000000;
-  font-family: Verdana;
-}
-
-span.subtitle {
-  font-size: 15px;
-  color: gray
-}
-.container {  
-  display: grid;
-  background: pink;
-  border-radius: 20px;
-  grid-template-columns: 1fr 1fr 0.7fr 1.3fr;
-  grid-template-rows: 0.5fr 2.2fr 0.3fr 1.5fr 0.5fr;
-  grid-auto-rows: 1fr;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "title title title title"
-    "deskripsi-persegi deskripsi-persegi deskripsi-persegi other-shapes"
-    "input input input other-shapes"
-    "output output output other-shapes"
-    "end-of-web end-of-web end-of-web end-of-web";
-}
-
-.title { grid-area: title; }
-
-.deskripsi-persegi {  
-  display: grid;
-  background: purple;
-  border-radius: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 0.5fr 1.5fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "judul-persegi judul-persegi judul-persegi"
-    "image-persegi rumus-persegi keterangan-rumus-persegi"
-    "image-persegi rumus-persegi keterangan-rumus-persegi";
-  grid-area: deskripsi-persegi;
-}
-
-.judul-persegi { 
-  grid-area: judul-persegi;
-  text-align: center;}
-
-.image-persegi { 
-  grid-area: image-persegi;
-}
-
-.rumus-persegi { 
-  grid-area: rumus-persegi;
-  text-align: center;}
-
-.keterangan-rumus-persegi { 
-  grid-area: keterangan-rumus-persegi;
-  text-align: center;
-}
-
-.input { grid-area: input; }
-
-.output {  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "output-luas output-keliling"
-    "output-luas output-keliling"
-    "output-luas output-keliling";
-  grid-area: output;
-}
-
-.output-luas { 
-  grid-area: output-luas;
-  background: purple;
-  border-radius: 20px;
-  text-align: center;
-}
-
-.output-keliling {
-  grid-area: output-keliling;
-  background: purple;
-  border-radius: 20px;
-  text-align: center;
-}
-
-.other-shapes { 
-  grid-area: other-shapes;
-  background: purple;
-  border-radius: 20px;
-  text-align: center;
-}
-
-.end-of-web { 
-  grid-area: end-of-web;
-  text-align: center; 
-}
-
-
-
+    color: white
+  }
+  body {
+    font-family: 'Varela Round';
+    margin: 40px;
+    background: purple;
+  }
+  h1 {
+    margin-left : 20px;
+  }
+  span.title {
+    font-weight: bold;
+    color: purple;
+    text-shadow: 2px 2px 4px #b47e7e;
+  }
+  
+  span.subtitle {
+    font-size: 15px;
+    color: rgb(84, 12, 85)
+  }
+  .container {  
+    display: grid;
+    background: pink;
+    border-radius: 20px;
+    grid-template-columns: 1fr 1fr 0.7fr 1.3fr;
+    grid-template-rows: 0.5fr 2.2fr 0.3fr 1.5fr 0.5fr;
+    grid-auto-rows: 1fr;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "title title title title"
+      "deskripsi-persegi deskripsi-persegi deskripsi-persegi other-shapes"
+      "input input input other-shapes"
+      "output output output other-shapes"
+      "end-of-web end-of-web end-of-web end-of-web";
+  }
+  
+  .title { grid-area: title; }
+  
+  .deskripsi-persegi {  
+    display: grid;
+    background: purple;
+    border-radius: 20px;
+    margin : 10px 10px 5px 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 2fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "judul-persegi judul-persegi judul-persegi"
+      "image-persegi rumus-persegi keterangan-rumus-persegi";
+    grid-area: deskripsi-persegi;
+  }
+  
+  .judul-persegi { 
+    grid-area: judul-persegi;
+    color: pink ;
+    border-bottom: 5px dashed pink ;
+    text-align: center;}
+  
+  .image-persegi { 
+    grid-area: image-persegi;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .rumus-persegi { 
+    color: pink ;
+    grid-area: rumus-persegi;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
+  
+  .keterangan-rumus-persegi { 
+    color: pink ;
+    grid-area: keterangan-rumus-persegi;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .input { 
+    color: purple;
+    grid-area: input;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin : 10px 10px 10px 20px;
+  }
+  
+  .output {  display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "output-luas output-keliling"
+      "output-luas output-keliling"
+      "output-luas output-keliling";
+    grid-area: output;
+  }
+  
+  .output-luas { 
+    color: pink;
+    margin : 10px 10px 10px 20px;
+    grid-area: output-luas;
+    background: purple;
+    border-radius: 20px;
+    text-align: center;
+  }
+  
+  .output-keliling {
+    color: pink;
+    margin : 10px 10px 10px 10px;
+    grid-area: output-keliling;
+    background: purple;
+    border-radius: 20px;
+    text-align: center;
+  }
+  
+  .other-shapes { 
+    color: pink;
+    grid-area: other-shapes;
+    background: purple;
+    margin : 10px 20px 10px 10px;
+    border-radius: 20px;
+    text-align: center;
+  }
+  
+  .end-of-web { 
+    margin : 10px;
+    grid-area: end-of-web;
+    text-align: center; 
+  }
+  
+  
+  
+  
