--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
-header{
-    color: white
-  }
-  body {
-    font-family: 'Varela Round';
+header {
+    color: white;
+}
+body {
+    font-family: "Varela Round";
     margin: 40px;
     background: purple;
-  }
-  h1 {
-    margin-left : 20px;
-  }
-  span.title {
+}
+h1 {
+    margin-left: 20px;
+}
+span.title {
     font-weight: bold;
     color: purple;
     text-shadow: 2px 2px 4px #b47e7e;
-  }
-  
-  span.subtitle {
+}
+span.subtitle {
     font-size: 15px;
-    color: rgb(84, 12, 85)
-  }
-  .container {  
+    color: rgb(84, 12, 85);
+}
+.container {
     display: grid;
     background: pink;
     border-radius: 20px;
@@ -27,114 +26,134 @@ header{
     grid-template-rows: 0.5fr 2.2fr 0.3fr 1.5fr 0.5fr;
     grid-auto-rows: 1fr;
     grid-auto-flow: row;
-    grid-template-areas:
-      "title title title title"
-      "deskripsi-persegi deskripsi-persegi deskripsi-persegi other-shapes"
-      "input input input other-shapes"
-      "output output output other-shapes"
-      "end-of-web end-of-web end-of-web end-of-web";
-  }
-  
-  .title { grid-area: title; }
-  
-  .deskripsi-persegi {  
+    grid-template-areas: 
+    "title title title title" 
+    "deskripsi-persegi deskripsi-persegi deskripsi-persegi other-shapes"
+    "input input input other-shapes" 
+    "output output output other-shapes" 
+    "end-of-web end-of-web end-of-web end-of-web";
+}
+.title {
+    grid-area: title;
+}
+.deskripsi-persegi {
     display: grid;
     background: purple;
     border-radius: 20px;
-    margin : 10px 10px 5px 20px;
+    margin: 0px 10px 5px 20px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.5fr 2fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas:
-      "judul-persegi judul-persegi judul-persegi"
-      "image-persegi rumus-persegi keterangan-rumus-persegi";
+    grid-template-areas: "judul-persegi judul-persegi judul-persegi" "image-persegi rumus-persegi keterangan-rumus-persegi";
     grid-area: deskripsi-persegi;
-  }
-  
-  .judul-persegi { 
+}
+.judul-persegi {
     grid-area: judul-persegi;
-    color: pink ;
-    border-bottom: 5px dashed pink ;
-    text-align: center;}
-  
-  .image-persegi { 
+    color: pink;
+    border-bottom: 5px dashed pink;
+    text-align: center;
+}
+.image-persegi {
     grid-area: image-persegi;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .rumus-persegi { 
-    color: pink ;
+}
+.rumus-persegi {
+    color: pink;
     grid-area: rumus-persegi;
     display: flex;
     justify-content: center;
     align-items: center;
-   }
-  
-  .keterangan-rumus-persegi { 
-    color: pink ;
+    text-align: center;
+}
+.keterangan-rumus-persegi {
+    color: pink;
     grid-area: keterangan-rumus-persegi;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .input { 
+}
+.input {
     color: purple;
     grid-area: input;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin : 10px 10px 10px 20px;
+    margin: 10px 10px 10px 20px;
+}
+
+.card-output {
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 0.5fr 2fr 0.5fr; 
+    gap: 0px 0px; 
+    grid-template-areas: 
+      "card-luas card-keliling"
+      "card-luas card-keliling"
+      "card-luas card-keliling"; 
+    grid-area: output; 
   }
   
-  .output {  display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+.card-luas {
+    color: pink;
+    margin: 10px 10px 10px 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 2fr 0.5fr;
     gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "output-luas output-keliling"
-      "output-luas output-keliling"
-      "output-luas output-keliling";
-    grid-area: output;
-  }
-  
-  .output-luas { 
-    color: pink;
-    margin : 10px 10px 10px 20px;
-    grid-area: output-luas;
+    grid-template-areas: "card-title-luas" "output_luas" "button-luas";
+    grid-area: card-luas;
+    justify-content: center;
+    align-items: center;
     background: purple;
     border-radius: 20px;
     text-align: center;
-  }
-  
-  .output-keliling {
+}
+.card-title-luas {
+    grid-area: card-title-luas;
+}
+.output_luas {
+    grid-area: output_luas;
+}
+.button-luas {
+    grid-area: button-luas;
+}
+.card-keliling {
     color: pink;
-    margin : 10px 10px 10px 10px;
-    grid-area: output-keliling;
+    margin: 10px 10px 10px 10px;
+    justify-content: center;
+    align-items: center;
+    grid-area: card-keliling;
     background: purple;
     border-radius: 20px;
     text-align: center;
-  }
-  
-  .other-shapes { 
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 2fr 0.5fr;
+    gap: 0px 0px;
+    grid-template-areas: "card-title-keliling" "output_keliling" "button-keliling";
+}
+.card-title-keliling {
+    grid-area: card-title-keliling;
+}
+.output_keliling {
+    grid-area: output_keliling;
+}
+.button-keliling {
+    grid-area: button-keliling;
+}
+.other-shapes {
     color: pink;
     grid-area: other-shapes;
     background: purple;
-    margin : 10px 20px 10px 10px;
+    margin: 0px 20px 10px 10px;
     border-radius: 20px;
     text-align: center;
-  }
-  
-  .end-of-web { 
-    margin : 10px;
+}
+.end-of-web {
+    margin: 15px;
     grid-area: end-of-web;
-    text-align: center; 
-  }
-  
-  
-  
-  
+    text-align: center;
+}
